Increase desktop circle size and add animated smiley face

--- a/style.css
+++ b/style.css
@@ -146,8 +146,8 @@ select {
 }
 
 .circle-progress.circle-grow {
-  width: 26rem;
-  height: 26rem;
+  width: 26.5rem;
+  height: 26.5rem;
 }
 
 .circle-outline {
@@ -189,6 +189,178 @@ select {
   padding-top: 0.5rem;
   margin-bottom: 1.7rem;
   z-index: 0;
+}
+
+.smiley-face {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 8rem;
+  height: 8rem;
+  opacity: 0;
+  z-index: 3;
+  pointer-events: none;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+
+.circle-progress.circle-grow ~ .smiley-face {
+  animation: smileyAppear 8s ease-in-out;
+  -webkit-animation: smileyAppear 8s ease-in-out;
+  -moz-animation: smileyAppear 8s ease-in-out;
+  -o-animation: smileyAppear 8s ease-in-out;
+  -ms-animation: smileyAppear 8s ease-in-out;
+}
+
+.eye {
+  position: absolute;
+  width: 1.2rem;
+  height: 1.2rem;
+  background-color: #ffffff;
+  border-radius: 50%;
+  top: 2.5rem;
+}
+
+.left-eye {
+  left: 2rem;
+}
+
+.right-eye {
+  right: 2rem;
+}
+
+.mouth {
+  position: absolute;
+  width: 4rem;
+  height: 2rem;
+  border: 0.3rem solid #ffffff;
+  border-top: none;
+  border-radius: 0 0 2rem 2rem;
+  bottom: 2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+
+@keyframes smileyAppear {
+  0% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  25% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  75% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  100% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+}
+
+@-webkit-keyframes smileyAppear {
+  0% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  25% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  75% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  100% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+}
+
+@-moz-keyframes smileyAppear {
+  0% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  25% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  75% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  100% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+}
+
+@-o-keyframes smileyAppear {
+  0% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  25% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  75% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  100% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+}
+
+@-ms-keyframes smileyAppear {
+  0% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  25% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  75% {
+    opacity: 1;
+    width: 8rem;
+    height: 8rem;
+  }
+  100% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
 }
 
 .breaths {
@@ -364,6 +536,56 @@ button:hover {
     height: 16rem;
   }
 
+  .smiley-face {
+    width: 5rem;
+    height: 5rem;
+  }
+
+  @keyframes smileyAppear {
+    0% {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    25% {
+      opacity: 1;
+      width: 5rem;
+      height: 5rem;
+    }
+    75% {
+      opacity: 1;
+      width: 5rem;
+      height: 5rem;
+    }
+    100% {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+  }
+
+  .eye {
+    width: 0.8rem;
+    height: 0.8rem;
+    top: 1.5rem;
+  }
+
+  .left-eye {
+    left: 1.2rem;
+  }
+
+  .right-eye {
+    right: 1.2rem;
+  }
+
+  .mouth {
+    width: 2.5rem;
+    height: 1.3rem;
+    border-width: 0.25rem;
+    border-radius: 0 0 1.3rem 1.3rem;
+    bottom: 1.2rem;
+  }
+
   .instructions {
     margin-bottom: 2rem;
   }
@@ -494,6 +716,56 @@ button:hover {
   .circle-progress.circle-grow {
     width: 17rem;
     height: 17rem;
+  }
+
+  .smiley-face {
+    width: 5.5rem;
+    height: 5.5rem;
+  }
+
+  @keyframes smileyAppear {
+    0% {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    25% {
+      opacity: 1;
+      width: 5.5rem;
+      height: 5.5rem;
+    }
+    75% {
+      opacity: 1;
+      width: 5.5rem;
+      height: 5.5rem;
+    }
+    100% {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+  }
+
+  .eye {
+    width: 0.9rem;
+    height: 0.9rem;
+    top: 1.7rem;
+  }
+
+  .left-eye {
+    left: 1.4rem;
+  }
+
+  .right-eye {
+    right: 1.4rem;
+  }
+
+  .mouth {
+    width: 2.8rem;
+    height: 1.4rem;
+    border-width: 0.25rem;
+    border-radius: 0 0 1.4rem 1.4rem;
+    bottom: 1.3rem;
   }
 
   .circle-wrap {
